js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenJsModules/js-module-a-new.mjs
export function externalDemoFunction() { return 3; }